[gd_scene load_steps=2 format=3 uid="uid://cqeyjh35es28n"]

[ext_resource type="Script" uid="uid://bggpqkec3umhp" path="res://UI/overlay_ui.gd" id="1_d4k5y"]

[node name="OverlayUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_d4k5y")

[node name="AreaLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 36
text = "Location:"

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_right = 443.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 36
text = "Time:"

[node name="DayLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 900.0
offset_right = 977.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 36
text = "Day:"
